# solmint

./: .gitignore  README.md  docker-compose.yml  roadmap.md
backend/: .env.example  Cargo.toml  Dockerfile  README.md
backend/.cargo/: config.toml
backend/migrations/: 001_initial.sql
backend/src/: config.rs  database.rs  error.rs  main.rs
backend/src/handlers/: collections.rs  health.rs  listings.rs  mod.rs  nfts.rs  sales.rs  search.rs  stats.rs  upload.rs  users.rs
backend/src/models/: activity.rs  collection.rs  listing.rs  mod.rs  nft.rs  sale.rs  stats.rs  user.rs
backend/src/services/: cache.rs  indexer.rs  metadata.rs  mod.rs  polling_indexer.rs  websocket_indexer.rs
backend/src/utils/: mod.rs
marketplace/: README.md  next.config.ts  package-lock.json  package.json
marketplace/src/app/: globals.css  layout.tsx  page.tsx
marketplace/src/components/marketplace/: CreateNFTModal.tsx  FeeModal.tsx  MarketplaceContent.tsx  MarketplaceDashboard.tsx  MarketplaceHeader.tsx  MarketplaceInitialization.tsx  MarketplaceLayout.tsx  MarketplaceSidebar.tsx  NFTGrid.tsx  WalletConnectionScreen.tsx
marketplace/src/components/wallet/: WalletButton.tsx  WalletProvider.tsx
marketplace/src/constants/: index.ts
marketplace/src/hooks/: useBackendApi.ts  useMarketplace.ts  useWallet.ts
marketplace/src/lib/api/: client.ts
marketplace/src/lib/solana/: connection.ts  marketplace.ts  program.ts  wallet.ts
marketplace/src/types/: index.ts
solana-program/: Cargo.toml  README.md
solana-program/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
