[package]
name = "solmint-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8.4", features = ["macros", "multipart"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
hyper = { version = "1.0", features = ["full"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }

# Solana
solana-client = "3.0.1"
solana-sdk = "3.0.0"
solana-program = "3.0.0"
anchor-client = "0.31.1"
anchor-lang = "0.31.1"

# Caching
redis = { version = "0.24", features = ["tokio-comp"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rust_decimal = { version = "1.33", features = ["serde"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Authentication
jsonwebtoken = "9.0"
bcrypt = "0.15"

# Rate limiting
governor = "0.6"

# Background jobs
tokio-cron-scheduler = "0.10"

# Metrics
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Image processing
image = "0.24"

# File upload
multer = "3.0"

[dev-dependencies]
tower-test = "0.4"
