[package]
name = "solmint-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8.4", features = ["macros", "multipart"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
hyper = { version = "1.0", features = ["full"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "rust_decimal", "migrate"] }
sqlx-cli = "0.8.6"

# Solana
solana-client = "3.0.1"
solana-sdk = "3.0.0"
solana-program = "3.0.0"
solana-transaction-status = "3.0.1"
solana-account-decoder = "3.0.1"
solana-commitment-config = "3.0.0"
borsh = "1.0"

# Caching
redis = { version = "0.24", features = ["tokio-comp"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
rust_decimal = { version = "1.33", features = ["serde"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Validation
validator = { version = "0.18", features = ["derive"] }
aws-config = "1.8.6"
aws-sdk-s3 = "1.106.0"
spl-associated-token-account = "7.0.0"
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
solana-system-program = "3.0.2"
solana-pubkey = "3.0.0"

# AWS SDK
# aws-config = "1.1"
# aws-sdk-s3 = "1.15"
# aws-types = "1.1"

[dev-dependencies]
tower-test = "0.4"
